k8Config/service-Application.yaml
kind: Service
apiVersion: v1
metadata:
  name: knowledgebaseservice
spec:
  selector:
    app: knowledgebaseapp
  ports:
    - protocol: "TCP"
      port: 8081
      # Port accessible inside cluster
      targetPort: 8081
  type: ClusterIP  #need to change to cluster ip
